@@ -1,6 +1,10 @@
 /***********************************************************************
 X3 ChangeLog
 
+1009-10-07  Henrik Stuart <evilnet@hstuart.dk>
+
+	* src/mod-python.c: refactor dict_t construction logic.
+
 2009-10-07  Henrik Stuart <evilnet@hstuart.dk>
 
 	* src/mod-python.c: improve error logic for emb_get_channel.
